--- a/Major_Project_Frontend/public/index.html
+++ b/Major_Project_Frontend/public/index.html
@@ -30,7 +30,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Smart Health Card</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
